что работает трогать больше не буду! почта работает! авториация работает! (надо убрать токены в базу + убрать сессию + вырезать гмайл апи, я боюсь попасть на миллион долларов за его использование + сделать чтобы не все были админами) но это все не критично для работы так что пофик.